# fibtrace

./: .gitignore  MANIFEST.in  README.md  README_WEB.md  pyproject.toml  requirements.txt
deprecated/: README.md  pyproject.toml  requirements.txt
deprecated/fibtrace/: __init__.py  __main__.py  parsers.py  walker.py
fibtrace/: __init__.py  __main__.py  app.py  cli.py  client.py  commands_and_parsers.py  diagnostics.py  diff.py  events.py  fibtrace_viewer.html  forwarding_graph.py  models.py  parsers.py  theme.tcss  tui.py  viewer.py  walker.py
fibtrace/web/: __init__.py  __main__.py  app.py  auth.py
fibtrace/web/templates/: dashboard.html  diff_viewer.html  graph.html  login.html  viewer.html
