[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibtrace"
version = "0.2.2"
description = "Hop-by-hop forwarding chain validation from the device perspective. Not a traceroute — a FIB trace."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Scott Peterman"},
]
keywords = [
    "network",
    "networking",
    "automation",
    "forwarding",
    "fib",
    "traceroute",
    "ospf",
    "bgp",
    "ipv6",
    "multi-vendor",
    "arista",
    "juniper",
    "cisco",
    "tui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "paramiko>=3.0.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "PyNaCl>=1.5.0",
    "textfsm>=1.1.3",
    "textual>=0.70.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/scottpeterman/fibtrace"
Repository = "https://github.com/scottpeterman/fibtrace"
Issues = "https://github.com/scottpeterman/fibtrace/issues"

[project.scripts]
fibtrace = "fibtrace.app:main"
fibtrace-cli = "fibtrace.walker:main"

[tool.setuptools.packages.find]
include = ["fibtrace*"]

[tool.setuptools.package-data]
fibtrace = ["*.tcss"]