[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibtrace"
version = "0.4.0"
description = "Hop-by-hop forwarding chain validation with ECMP graph visualization. Not a traceroute — a FIB trace."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Scott Peterman"},
]
keywords = [
    "network",
    "networking",
    "automation",
    "forwarding",
    "fib",
    "traceroute",
    "ecmp",
    "graph",
    "dag",
    "visualization",
    "ospf",
    "bgp",
    "ipv6",
    "multi-vendor",
    "arista",
    "juniper",
    "cisco",
    "tui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]

# Core dependencies — the walker, diff, and viewer launcher only.
# Optional UIs (TUI, web) live in [project.optional-dependencies] below.
dependencies = [
    "paramiko>=3.0.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "PyNaCl>=1.5.0",
    "textfsm>=1.1.3",
]

[project.optional-dependencies]
tui = [
    "textual>=0.70.0",
    "rich>=13.0.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "websockets>=11.0",
]
ldap = [
    "ldap3>=2.9",
]
all = [
    "fibtrace[tui,web]",
]
dev = [
    "fibtrace[all]",
    "pytest>=7.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/scottpeterman/fibtrace"
Repository = "https://github.com/scottpeterman/fibtrace"
Issues = "https://github.com/scottpeterman/fibtrace/issues"
Changelog = "https://github.com/scottpeterman/fibtrace/blob/main/CHANGELOG.md"

[project.scripts]
fibtrace = "fibtrace.cli:main"

[tool.setuptools.packages.find]
include = ["fibtrace*"]

[tool.setuptools.package-data]
fibtrace = ["*.tcss", "*.html"]
"fibtrace.web" = ["templates/*.html", "static/*"]